--- a/platzi-bootstrap/index.html
+++ b/platzi-bootstrap/index.html
@@ -74,7 +74,8 @@
             <div class="row align-items-center">
               <div class="col-md-6 offset-md-6 text-center text-md-end">
                 <h1>Platzi Conf Hawaii</h1>
-                <p class="d-none d-md-block">Platzi Conf llega por primera vez a Hawaii! Un evento para comparti con nuestra comunidad el
+                <p class="d-none d-md-block">Platzi Conf llega por primera vez a Hawaii! Un evento para comparti con
+                  nuestra comunidad el
                   conocimiento y experiencia
                   de kis expertos que están creando el futuro de internet.
                   Ven a conocer a miembros del Team Platzi, a otros estudiantes de Platzi y a los oradores de primer
@@ -91,6 +92,116 @@
     </div>
   </main>
   <!--/Main-->
+
+  <!--Speackers-->
+  <section id="speakers" class="mt-4">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center text-uppercase">
+          <small>Conoce a los</small>
+          <h2>Oradores</h2>
+        </div>
+      </div>
+      <div class="row">
+
+        <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <img src="./assets/speakers/sacha.jpg" class="card-img-top" alt="Foto de Sacha">
+            <div class="card-body">
+              <div class="badges mb-2 text-end">
+                <span class="badge bg-warning">JavaScript</span>
+                <span class="badge bg-info">React</span>
+              </div>
+              <h5 class="card-title">Sacha Lifsyzc</h5>
+              <p class="card-text">Fusce nec nibh suscipit, laoreet nulla consectetur, lacinia quam. Pellentesque
+                fringilla mi eget neque imperdiet, et hendrerit ligula luctus. Nulla aliquet risus porta massa tempor,
+                at pulvinar turpis dapibus.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <img src="./assets/speakers/leonidas2.jpeg" class="card-img-top" alt="Foto de Leonidas">
+            <div class="card-body">
+              <div class="badges mb-2 text-end">
+                <span class="badge bg-success">Python</span>
+                <span class="badge bg-info">Django</span>
+              </div>
+              <h5 class="card-title">Leonidas Esteban</h5>
+              <p class="card-text">Fusce nec nibh suscipit, laoreet nulla consectetur, lacinia quam. Pellentesque
+                fringilla mi eget neque imperdiet, et hendrerit ligula luctus. Nulla aliquet risus porta massa tempor,
+                at pulvinar turpis dapibus.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <img src="./assets/speakers/freddy.jpeg" class="card-img-top" alt="Foto de Freddy">
+            <div class="card-body">
+              <div class="badges mb-2 text-end">
+                <span class="badge bg-success">SQL</span>
+                <span class="badge bg-danger">HTML</span>
+              </div>
+              <h5 class="card-title">Freddy Vega</h5>
+              <p class="card-text">Fusce nec nibh suscipit, laoreet nulla consectetur, lacinia quam. Pellentesque
+                fringilla mi eget neque imperdiet, et hendrerit ligula luctus. Nulla aliquet risus porta massa tempor,
+                at pulvinar turpis dapibus.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <img src="./assets/speakers/cvander.jpeg" class="card-img-top" alt="Foto de Christian">
+            <div class="card-body">
+              <div class="badges mb-2 text-end">
+                <span class="badge bg-primary">Angular</span>
+              </div>
+              <h5 class="card-title">Christian Van Der H.</h5>
+              <p class="card-text">Fusce nec nibh suscipit, laoreet nulla consectetur, lacinia quam. Pellentesque
+                fringilla mi eget neque imperdiet, et hendrerit ligula luctus. Nulla aliquet risus porta massa tempor,
+                at pulvinar turpis dapibus.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+
+
+      </div>
+    </div>
+  </section>
+  <!--/Speackers-->
+
+
+  <!-- Lugar y fecha-->
+
+  <section id="place-time">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 col-lg-6 px-0">
+          <img src="./assets/images/honolulu.jpg" alt="Honolulu">
+        </div>
+        <div class="col-12 col-lg-6 pt-4 pb-4">
+          <h2>Honolulu - Octubre 2025</h2>
+          <p>
+            Honolulu es la capital y localidad más grande del estado de Hawái, en los Estados Unidos. Honolulu
+            es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere
+            al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una
+            ciudad-condado consolidada que cubre toda la isla (aproximadamente 600 km² de superficie).
+          </p>
+          <a href="" class="btn btn-outline-light" href="https://es.wikipedia.org/wiki/Honolulu">Conoce más</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- /Lugar y fecha-->
+
   <!--Footer-->
   <footer id="footer" class="pb-4 pt-4">
 
