--- a/platzi-bootstrap/index.html
+++ b/platzi-bootstrap/index.html
@@ -202,6 +202,68 @@
 
   <!-- /Lugar y fecha-->
 
+
+  <!-- Conviertete en orador-->
+
+  <section id="conviertete-en-orador" class="pt-3 pb-3">
+
+    <div class="container">
+      <div class="row">
+
+        <div class="col text-uppercase text-center">
+
+          <small>Conviértete en un</small>
+          <h2>Orador</h2>
+
+        </div>
+
+        <div class="row">
+          <div class="col text-center">
+            Anotate como orador para dar una <abbr data-bs-toggle="tooltip" title="Charlas de 5 minutos">charla ignite</abbr>.
+            Cuéntanos de qué quieres hablar!
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col col-md-10 offset-md-1 col-lg-8 offset-md-2 pt-2">
+
+            <div class="row">
+              <div class="mb-3 col-12 col-md-6">
+                <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
+              </div>
+              <div class="mb-3 col-12 col-md-6">
+                <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="mb-3 col">
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Sobre qué quieres hablar"></textarea>
+                <small class="form-text text-muted">
+                    Recuerda incluir un título para tu charla
+                </small>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col">
+                <button type="submit" class="btn btn-platzi w-100">Enviar</button>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+
+      </div>
+
+    </div>
+
+  </section>
+
+  <!--/Conviertete en orador-->
+
+
   <!--Footer-->
   <footer id="footer" class="pb-4 pt-4">
 
@@ -246,6 +308,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
+  
+  <script src="index.js"></script>
 </body>
 
 </html>
