--- a/platzi-bootstrap/index.html
+++ b/platzi-bootstrap/index.html
@@ -15,11 +15,11 @@
   <title>PlatziConf Hawaii</title>
 </head>
 
-<body>
+<body data-bs-spy="scroll" data-bs-target="#navbarSupportedContent" data-bs-offset="56">
 
   <!--Header-->
 
-  <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container">
       <a class="navbar-brand" href="#">
         <img src="./assets/images/platzi-logo.png" alt="Platzi Logo">
@@ -30,9 +30,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0" role="tablist">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
+            <a class="nav-link" aria-current="page" href="#">La conferencia</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Los oradores</a>
