--- a/platzi-bootstrap/index.html
+++ b/platzi-bootstrap/index.html
@@ -32,19 +32,20 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0" role="tablist">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">La conferencia</a>
+            <a class="nav-link" aria-current="page" href="#main">La conferencia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Los oradores</a>
+            <a class="nav-link" href="#speakers">Los oradores</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">El lugar y la fecha</a>
+            <a class="nav-link" href="#place-time">El lugar y la fecha</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Conviértete en orador</a>
+            <a class="nav-link" href="#conviertete-en-orador">Conviértete en orador</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-platzi" href="#">Comprar tickets</a>
+            <a class="nav-link text-platzi" href="#" data-bs-toggle="modal" data-bs-target="#modalCompra">Comprar
+              tickets</a>
           </li>
 
 
@@ -82,7 +83,8 @@
                   nivel que tenemos para ti. Te esperamos!
                 </p>
                 <a href="#" class="btn btn-outline-light">Quiero ser orador</a>
-                <button type="button" class="btn btn-success">Comprar tickets</button>
+                <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                  data-bs-target="#modalCompra">Comprar tickets</button>
               </div>
             </div>
           </div>
@@ -219,7 +221,8 @@
 
         <div class="row">
           <div class="col text-center">
-            Anotate como orador para dar una <abbr data-bs-toggle="tooltip" title="Charlas de 5 minutos">charla ignite</abbr>.
+            Anotate como orador para dar una <abbr data-bs-toggle="tooltip" title="Charlas de 5 minutos">charla
+              ignite</abbr>.
             Cuéntanos de qué quieres hablar!
           </div>
         </div>
@@ -238,9 +241,10 @@
 
             <div class="row">
               <div class="mb-3 col">
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Sobre qué quieres hablar"></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                  placeholder="Sobre qué quieres hablar"></textarea>
                 <small class="form-text text-muted">
-                    Recuerda incluir un título para tu charla
+                  Recuerda incluir un título para tu charla
                 </small>
               </div>
             </div>
@@ -296,6 +300,39 @@
   </footer>
   <!--/Footer-->
 
+
+  <!--modal-->
+  <div class="modal fade" id="modalCompra" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-row">
+              <div class="form-group col">
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="basic-addon1">@</span>
+                  <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                    aria-describedby="basic-addon1">
+                </div>
+              </div>
+            </div>
+          </form>
+          <div class="alert alert-warning" role="alert">
+            Recibirás un correo de confirmación si sales sorteado!
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-platzi">Comprar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--/modal-->
   <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -308,7 +345,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
-  
+
   <script src="index.js"></script>
 </body>
 
